--- a/Actividad_react_vite/src/componentes/App.css
+++ b/Actividad_react_vite/src/componentes/App.css
@@ -85,6 +85,23 @@ li::before {
 }
 
 /* ===== Imágenes ===== */
+
+.fotoHV {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid #1e3a8a;
+  margin-bottom: 15px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease;
+}
+
+.fotoHV:hover {
+  transform: scale(1.05); /* efecto al pasar el cursor */
+}
+
+
 img {
   display: block;
   max-width: 100%;
